test/classes/diten/callNilClassesMethod.good
callNilClassesMethod.chpl:13: error: attempt to dereference nil
